WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266736
[WebGPU] CTS validation/render_pipeline/overrides.html is failing
https://bugs.webkit.org/show_bug.cgi?id=266736
Summary
[WebGPU] CTS validation/render_pipeline/overrides.html is failing
Mike Wyrzykowski
Reported
2023-12-20 16:02:27 PST
[WebGPU] CTS validation/render_pipeline/overrides.html is failing
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-12-20 16:02:44 PST
<
rdar://problem/119958238
>
Mike Wyrzykowski
Comment 2
2023-12-21 16:23:35 PST
***
Bug 266775
has been marked as a duplicate of this bug. ***
Mike Wyrzykowski
Comment 3
2023-12-21 16:29:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22184
EWS
Comment 4
2024-01-02 23:21:21 PST
Committed
272598@main
(7dcc17c26e02): <
https://commits.webkit.org/272598@main
> Reviewed commits have been landed. Closing PR #22184 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug