[WebGPU] CTS validation/render_pipeline/overrides.html is failing https://bugs.webkit.org/show_bug.cgi?id=266736 <radar://119958238>

Reviewed by Tadeu Zagallo.

Add validation for overrides such that render_pipeline/overrides.html now passes.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/render_pipeline/overrides-expected.txt:
Add passing expectations.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/render_pipeline/overrides-expected.txt:
* Source/WebCore/Modules/WebGPU/Implementation/WebGPUDeviceImpl.cpp:
(WebCore::WebGPU::convertToBacking):
* Source/WebGPU/WebGPU/ComputePipeline.mm:
(WebGPU::Device::createComputePipeline):
* Source/WebGPU/WebGPU/Pipeline.h:
* Source/WebGPU/WebGPU/Pipeline.mm:
(WebGPU::createConstantValues):
* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::Device::createRenderPipeline):

* Source/WebGPU/WebGPU/ShaderModule.h:
(WebGPU::ShaderModule::create):
* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::earlyCompileShaderModule):
(WebGPU::handleShaderSuccessOrFailure):
(WebGPU::Device::createShaderModule):
(WebGPU::ShaderModule::ShaderModule):
(WebGPU::ShaderModule::hasOverride const):
Workaround lack of unicode WGSL source support for now until
https://bugs.webkit.org/show_bug.cgi?id=266774 is implemented.

Canonical link: https://commits.webkit.org/272598@main